fixing db connections for weather scripts

--- a/collect_real_time_mta_info.ipynb
+++ b/collect_real_time_mta_info.ipynb
@@ -673,11 +673,11 @@
     "from sqlalchemy import create_engine, text\n",
     "\n",
     "# === Database config ===\n",
-    "DB_USER = \"postgres\"\n",
-    "DB_PASSWORD = \"commiteveryday\"\n",
-    "DB_HOST = \"localhost\"\n",
+    "DB_USER = \"neondb_owner\"\n",
+    "DB_PASSWORD = \"npg_J73HnAiwErpq\"  # Replace with the password you revealed\n",
+    "DB_HOST = \"ep-spring-truth-ae312q45-pooler.c-2.us-east-2.aws.neon.tech\"\n",
     "DB_PORT = \"5432\"\n",
-    "DB_NAME = \"train_delays\"\n",
+    "DB_NAME = \"neondb\"\n",
     "\n",
     "# === Create DB engine ===\n",
     "engine = create_engine(f\"postgresql://{DB_USER}:{DB_PASSWORD}@{DB_HOST}:{DB_PORT}/{DB_NAME}\")\n",
