--- a/collect_real_time_mta_info.ipynb
+++ b/collect_real_time_mta_info.ipynb
@@ -1007,7 +1007,7 @@
     "\n",
     "# === Database config ===\n",
     "DB_USER = \"neondb_owner\"\n",
-    "DB_PASSWORD = \"npg_J73HnAiwErpq\"  # Replace with the password you revealed\n",
+    "DB_PASSWORD = \"\"  # Replace with the password you revealed\n",
     "DB_HOST = \"ep-spring-truth-ae312q45-pooler.c-2.us-east-2.aws.neon.tech\"\n",
     "DB_PORT = \"5432\"\n",
     "DB_NAME = \"neondb\"\n",
