--- a/db_migration.ipynb
+++ b/db_migration.ipynb
@@ -30,7 +30,7 @@
     "\n",
     "# Neon database connection\n",
     "NEON_DB_USER = \"neondb_owner\"\n",
-    "NEON_DB_PASSWORD = \"npg_J73HnAiwErpq\"  # Replace with the password you revealed\n",
+    "NEON_DB_PASSWORD = \"\"  # Replace with the password you revealed\n",
     "NEON_DB_HOST = \"ep-spring-truth-ae312q45-pooler.c-2.us-east-2.aws.neon.tech\"\n",
     "NEON_DB_PORT = \"5432\"\n",
     "NEON_DB_NAME = \"neondb\"\n",
